--- a/WebApplication1/Views/Department/Index.cshtml
+++ b/WebApplication1/Views/Department/Index.cshtml
@@ -14,19 +14,23 @@
      </thead>
      <tbody>
          @foreach (var department in Model){
-             <tr>
+         <tr>
                  <td>@department.Code</td>
                     <td>@department.Name</td>
-         <a asp-action="Details" asp-route-id="@department.Id" class="btn btn-warning">
+         <td><a asp-action="Details" asp-route-id="@department.Id" class="btn btn-warning">
              <i class="fas fa-eye"></i> Details
-         </a>
-        <a asp-action="Update" asp-route-id="@department.Id" class="btn btn-success">
+                        </a>
+                    </td>
+        <td><a asp-action="Update" asp-route-id="@department.Id" class="btn btn-success">
             <i class="fas fa-edit"></i> Update
         </a>
+        </td>
+        <td>
         <a asp-action="Delete" asp-route-id="@department.Id" class="btn btn-danger">
             <i class="fas fa-trash"></i> Delete
         </a>
-                </tr>
+                    </td>
+         </tr>
          }
      </tbody>
     </table>
