--- a/WebApplication1/Views/Department/Details.cshtml
+++ b/WebApplication1/Views/Department/Details.cshtml
@@ -6,15 +6,15 @@
 <form asp-action="Details" asp-route-id="@Model.Id">
     <div class="form-group">
         <label class="col-form-label" asp-for="Code"></label>
-        <input type="text" asp-for"Code" class="form-control" readonly />
+        <input type="text" asp-for="Code" class="form-control" readonly />
     </div>
     <div class="form-group">
         <label class="col-form-label" asp-for="Name"></label>
-        <input type="text" asp-for"Name" class="form-control" readonly />
+        <input type="text" asp-for="Name" class="form-control" readonly />
     </div>
     <div class="form-group">
         <label class="col-form-label" asp-for="CreatedAt"></label>
-        <input type="text" asp-for"CreatedAt" class="form-control" readonly />
+        <input type="text" asp-for="CreatedAt" class="form-control" readonly />
     </div>
 
    <input type="submit" value="Edit" class="btn btn-primary" />
