--- a/WebApplication1/Views/Department/Index.cshtml
+++ b/WebApplication1/Views/Department/Index.cshtml
@@ -17,7 +17,7 @@
          <tr>
                  <td>@department.Code</td>
                     <td>@department.Name</td>
-         <td><a asp-action="Details" asp-route-id="@department.Id" class="btn btn-warning">
+        @*  <td><a asp-action="Details" asp-route-id="@department.Id" class="btn btn-warning">
              <i class="fas fa-eye"></i> Details
                         </a>
                     </td>
@@ -29,7 +29,9 @@
         <a asp-action="Delete" asp-route-id="@department.Id" class="btn btn-danger">
             <i class="fas fa-trash"></i> Delete
         </a>
-                    </td>
+                    </td> *@
+
+                    <partial name="_ActionButtonsPartialView" model="@department.Id.ToString()" />
          </tr>
          }
      </tbody>
