Paer 1 - DTO Service Layer

--- a/WebApplication1/Views/Employee/Create.cshtml
+++ b/WebApplication1/Views/Employee/Create.cshtml
@@ -37,7 +37,7 @@
         <label class="col-form-label" asp-for="Department"></label>
         <select asp-items="@departments" asp-for="DepartmentId" class="form-control">
 
-        <option value="@Department.Id"> -- SelectDepartment </option>
+        <option value="@departments"> -- SelectDepartment </option>
             </select>
     </div> 
 
