--- a/WebApplication1/Views/Employee/Index.cshtml
+++ b/WebApplication1/Views/Employee/Index.cshtml
@@ -1,6 +1,7 @@
 ﻿@using Company.Data.Models
+@using Company.Service.Dto
 
-@model IEnumerable<Employee>
+@model IEnumerable<EmployeeDto>
 <h1>All Employees</h1>
 <br />
 <br />
