--- a/WebApplication1/Views/Department/Details.cshtml
+++ b/WebApplication1/Views/Department/Details.cshtml
@@ -1,5 +1,6 @@
 ﻿@using Company.Data.Models
-@model Department
+@using Company.Service.Dto
+@model DepartmentDto
 
 <h1>Department Details</h1>
 
@@ -12,10 +13,7 @@
         <label class="col-form-label" asp-for="Name"></label>
         <input type="text" asp-for="Name" class="form-control" readonly />
     </div>
-    <div class="form-group">
-        <label class="col-form-label" asp-for="CreatedAt"></label>
-        <input type="text" asp-for="CreatedAt" class="form-control" readonly />
-    </div>
+
 
    <input type="submit" value="Edit" class="btn btn-primary" />
    <a asp-action="Index" class="btn btn-light">Back To List</a>
