--- a/WebApplication1/Views/Department/Index.cshtml
+++ b/WebApplication1/Views/Department/Index.cshtml
@@ -1,5 +1,6 @@
 ﻿ @using Company.Data.Models;
- @model IEnumerable<Department>
+@using Company.Service.Dto
+ @model IEnumerable<DepartmentDto>
  <a asp-action="Create" asp-controller="Department" class="btn btn-primary">Create new deparment</a>
  @if(Model.Count()>0){
 <table class="table table-striped table-hover">
