--- a/WebApplication1/Views/Department/Update.cshtml
+++ b/WebApplication1/Views/Department/Update.cshtml
@@ -1,4 +1,4 @@
-﻿@model Company.Data.Models.Department
+﻿@model Company.Service.Dto.DepartmentDto
 
 @{
     ViewData["Title"] = "Update";
@@ -24,16 +24,8 @@
                 <span asp-validation-for="Code" class="text-danger"></span>
             </div>
             <input type="hidden" asp-for="Id" />
-            <div class="form-group">
-                <label asp-for="CreatedAt" class="control-label"></label>
-                <input asp-for="CreatedAt" class="form-control" />
-                <span asp-validation-for="CreatedAt" class="text-danger"></span>
-            </div>
-            <div class="form-group form-check">
-                <label class="form-check-label">
-                    <input class="form-check-input" asp-for="IsDeleted" /> @Html.DisplayNameFor(model => model.IsDeleted)
-                </label>
-            </div>
+
+
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
